crates/plotnik-tests/tests/03-analyze/duplicates/duplicate_capture_bubbled_into_own_node.txt
Q = (foo
  (a) @x
) @x
------------------ DIAGNOSTICS -------------------
error: capture `@x` already defined in this scope
 --> query.ptk:3:3
  |
2 |   (a) @x
  |       -- first captured here
3 | ) @x
  |   ^^
  |
help: rename one capture, or use labeled alternatives to preserve which alternative matched
------------------ DEFINITIONS -------------------
Q
